--- a/index.html
+++ b/index.html
@@ -60,10 +60,46 @@
 
         </section>
 
-        <section id="skills">
-            <span class="badge bg-primary">HTML</span>
-            <span class="badge bg-success">CSS</span>
-            <span class="badge bg-info text-dark">JS</span>
+        <section id="skills" class="vh-100">
+            <div class="container">
+                <h1 class="text-warning text-center">Skills</h1>
+                <div class="row text-center">
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2">
+                        <h2 class="text-light">Web Development</h2>
+                        <p class="text-secondary">HTML | CSS | Bootsrap | Java Script</p>
+                        <p></p>
+                    </div>
+
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2">
+                        <h2 class="text-light">Machine Learning</h2>
+                        <p class="text-secondary">EDA, Data Preprocessing, Model building(Supervised & Unsupervised Learning)</p>
+                        <p></p>
+                    </div>
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2">
+                        <h2 class="text-light">Data Analysis </h2>
+                        <p class="text-secondary">Excel | Power BI</p>
+                        <p></p>
+                    </div>
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2">
+                        <h2 class="text-light">Database</h2>
+                        <p class="text-secondary">MySQL</p>
+                        <p></p>
+                    </div>
+                    
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2">
+                        <h2 class="text-light">Version Control</h2>
+                        <p class="text-secondary">Git | GitHub</p>
+                        <p></p>
+                    </div>
+
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2">
+                        <h2 class="text-light">Languages</h2>
+                        <p class="text-secondary">C++, Python, Java</p>
+                        <p></p>
+                    </div>
+
+                </div>
+            </div> 
 
         </section>
         
