updated skill section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between " id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item" ><a class=" nav-link active  " href="#">Home</a></li>
-                        <li class="nav-item" ><a class=" nav-link" href="#">About</a></li>
-                        <li class="nav-item" ><a class=" nav-link" href="#">Skills</a></li>
+                        <li class="nav-item" ><a class=" nav-link active  " href="#home">Home</a></li>
+                        <li class="nav-item" ><a class=" nav-link" href="#about">About</a></li>
+                        <li class="nav-item" ><a class=" nav-link" href="#skills">Skills</a></li>
                         <li class="nav-item" ><a class=" nav-link" href="#">Projects</a></li>
                         <li class="nav-item" ><a class=" nav-link" href="#">Contact</a></li>
                     </ul>
@@ -64,35 +64,39 @@
             <div class="container">
                 <h1 class="text-warning text-center">Skills</h1>
                 <div class="row text-center">
-                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2">
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2 h-100" style="height: 230px;">
                         <h2 class="text-light">Web Development</h2>
                         <p class="text-secondary">HTML | CSS | Bootsrap | Java Script</p>
                         <p></p>
                     </div>
 
-                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2">
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2 h-100" style="height: 230px;">
                         <h2 class="text-light">Machine Learning</h2>
                         <p class="text-secondary">EDA, Data Preprocessing, Model building(Supervised & Unsupervised Learning)</p>
                         <p></p>
                     </div>
-                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2">
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2 h-100" style="height: 230px;">
                         <h2 class="text-light">Data Analysis </h2>
                         <p class="text-secondary">Excel | Power BI</p>
                         <p></p>
                     </div>
-                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2">
+                   
+
+                </div>
+                <div class="row text-center">
+                     <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-3 m-2 h-100" style="height: 230px;">
                         <h2 class="text-light">Database</h2>
                         <p class="text-secondary">MySQL</p>
                         <p></p>
                     </div>
                     
-                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2">
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2 h-100" style="height: 230px;">
                         <h2 class="text-light">Version Control</h2>
                         <p class="text-secondary">Git | GitHub</p>
                         <p></p>
                     </div>
 
-                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2">
+                    <div class="col border border-2 border-white shadow-sm bg-secondary bg-opacity-10 rounded p-4 m-2 h-100" style="height: 230px;">
                         <h2 class="text-light">Languages</h2>
                         <p class="text-secondary">C++, Python, Java</p>
                         <p></p>
