--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
             <div class="container ">
-                <a href="#" class="navbar-brand text-light fw-bolder fs-3 ">Deepali.</a>
+                <a href="#" class="navbar-brand text-light fw-bolder fs-3 ">Rijhi.</a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -37,8 +37,8 @@
     
     <main>
         <section id="home" class="text-center text-light p-lg-5 mt-5 min-vh-100">
-           <h1 class="display-4 fw-bold">Hi, I'm Deepali 👋</h1>
-           <p class="lead">An aspiring Software Developer passionate about problem solving and code.</p>
+           <h1 class="display-4 fw-bold">Hi, I'm Rijhi👋</h1>
+           <p class="lead">Find all study material here...</p>
            <a href="#contact" class="btn btn-warning">Get in Touch </a>
 
         </section>
